# vasiliy

./: .gitignore  README.md  main.py  prometheus.yaml  pyproject.toml
config/: config.yaml  system_prompt.txt
scripts/: launch_logging.sh
src/agent/: agent.py
src/agent/metrics/: __init__.py  metrics.py
src/app/: app.py  message_processing.py
src/context/: context.py
src/metrics/: __init__.py  loggers.py  metrics.py
src/tools/telegram/: __init__.py  chatting_tools.py
src/types/: __init__.py  messages_converter.py
src/utils/: __init__.py
