[project]
name = "vasiliy2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "click>=8.3.3",
    "google-genai>=1.72.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
]

[tool.pyrefly]
search-path = ["."]
